--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@
 
               <div>
                 <i class="fa fa-envelope"></i>
-                <p>enhking@gmail.com</p>
+                <p>enkhkingconcrete@gmail.com</p>
               </div>
 
               <div>
                 <i class="fa fa-phone"></i>
-                <p>+97610101011</p>
+                <p>+97698111107</p>
               </div>
             </div>
 
